--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
         </div>
         
     </div>
-    <script src="app.js"></script>
+    <script src="javascript.js"></script>
 </body>
 </html>
